--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -139,7 +139,7 @@ a:hover {
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Logistic regression II
+# Story and Quiz − Adjusting for bias II
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias
@@ -149,52 +149,88 @@ a:hover {
 
 ### ロジスティック回帰で「調整する」ってどういうこと？
 
-**私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」
+::: 
 
+::: voice-father
 お父さん「ああ、そんな話もあったね」
 
-**私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」**
+::: voice-daughter
+私「でもさ、調整しないオッズ比も計算できるでしょ。どっちが正しいのかってどうやればわかるの？統計学の本を読んでも、書いてなくて」
+::: 
 
+::: voice-father
 お父さん「それは統計学だけではわからない問題なんだ。データがどんな確率分布に従っているか、誰も知らないからね。因果推論や医学知識を使って判断すべき問題になる」
 
-**私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」**
+::: voice-daughter
+私「なにそれ？統計学の話じゃないの？ロジスティック回帰について聞いてるんだけど」
+::: 
 
+::: voice-father
 お父さん「そう思うよねえ。じゃあちょっと時間をかけて説明させてよ。」
+:::
 
-**私「いいけど」**
+::: voice-daughter
+私「いいけど」
+::: 
 
+::: voice-father
 お父さん「疫学の分野での話なんだけどね。40年前に、コーヒーが膵がんを増やすんじゃないか、っていう論文がでたことがある」
+::: 
 
-**私「いかにもありそうな話だね」**
+::: voice-daughter
+私「いかにもありそうな話だね」
+::: 
 
+::: voice-father
 お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲んでいる人のような曝露集団と、うまく比較できるようなコントロールを選ぶことは、ほとんどの場合難しい。だから、疫学の教科書では、コントロールと比較するときには、第3の因子が隠れていないかどうかに注意しなければいけないと書いてある」
+::: 
 
-**私「ふんふん」**
+::: voice-daughter
+私「ふんふん」
+::: 
 
+::: voice-father
 お父さん「それでは問題です。コーヒーと膵がんの論文で、実際に問題になった第3の因子はなんでしょう？」
+::: 
 
-**私「え？えーっと」**
+::: voice-daughter
+私「え？えーっと」
+::: 
 
 ![図2.png](logistic-regression-1.png)
 
+::: voice-father
 お父さん「答えはこちら」
+::: 
 
-::: {.callout-note collapse="true" title="お父さんの答えは？"}
+::: {.callout-note appearance="simple" collapse="true" title="お父さんの答えは？"}
 それは喫煙です。当時は今より喫煙率が高くて、ほとんどの方がコーヒーと一緒にたばこを吸っていたそうです。
 
 ![図1.png](logistic-regression-2.png)
 :::
 
-**私「へえ、そんな話があったんだ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「へえ、そんな話があったんだ」
+::: 
 
+::: voice-father
 お父さん「じゃあさ、こういう第3の因子を無視して解析してしまうとどうなる？」
 
-**私「それくらいわかるよ。バイアスが生じるんでしょ」**
+::: voice-daughter
+私「それくらいわかるよ。バイアスが生じるんでしょ」
+::: 
 
+::: voice-father
 お父さん「そういうこと。こういう因子は、疫学では交絡因子（confounder）と呼ばれているんだけど、ロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **Simpsonのパラドックス**
+
+::: {.callout-note appearance="simple" title="Simpsonのパラドックス"}
 
 コーヒーと膵がんの数値例を用いて、統計学でいう調整とはどういう操作のことなのかみてみましょう。ここでは層別解析を用いて説明しますが、ロジスティック回帰でオッズ比を求めたときも、同じ計算結果になります（交互作用をうまく入れる必要がありますが）。
 
@@ -229,17 +265,31 @@ a:hover {
 :::
 
 
-**私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」
+::: 
 
+::: voice-father
 お父さん「そう、交絡因子を無視して、間違った研究結果を報告してしまうとまずいでしょ。もうひとつ注目してほしいのが、喫煙とコーヒーの関連。喫煙状況ごとにコーヒー摂取割合を計算してみてよ」
+::: 
 
-**私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
+::: voice-daughter
+私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
+::: 
 
+::: voice-father
 お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。もし仮に、 コーヒー摂取・非摂取という介入をランダムに割付けるランダム化介入試験を行ったらどうなると思う？」
+::: 
 
-**私「両群で喫煙割合は、ほぼ同じになるはず」**
+::: voice-daughter
+私「両群で喫煙割合は、ほぼ同じになるはず」
+::: 
 
+::: voice-father
 お父さん「うん。そうすると、ランダム化介入試験で得られるオッズ比は、喫煙・非喫煙別の結果を平均することになるから、全体でも1倍に近い結果になると予想される。つまり、層別する前のオッズ比3倍という結果は、コーヒーではなく喫煙が真の原因となって生じた見かけの関連なので、層別した後のオッズ比が正しい。だから、ロジスティック回帰で調整オッズ比を求めるべきなんだ」
+::: 
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"} 
 
