--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -139,7 +139,7 @@ a:hover {
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Logistic regression IV
+# Story and Quiz − Adjusting for bias IV
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, estimation
@@ -149,13 +149,18 @@ a:hover {
 
 ### ロジスティック回帰の計算ができない理由
 
-**私「ロジスティック回帰についてなんだけど。ロジット関数のグラフでイメージはわいたんだけどさ。がんサバイバー調査だと、ロジスティック回帰は2群を比較するとき使うんだよね」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ロジスティック回帰についてなんだけど。ロジット関数のグラフでイメージはわいたんだけどさ。がんサバイバー調査だと、ロジスティック回帰は2群を比較するとき使うんだよね」
+::: 
 
+::: voice-father
 お父さん「そうだったね。じゃあ、続けてロジスティック回帰の下で、2人の対象者を比べるとどうなるかって話をするね」
+::: 
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **回帰係数とオッズ比の関係**
+::: {.callout-note appearance="simple" title="回帰係数とオッズ比の関係"}
 
 共変量が1個のとき、ロジスティック回帰は
 
@@ -175,19 +180,31 @@ $(\frac{\pi_2}{1-\pi_2})\div(\frac{\pi_1}{1-\pi_1})=\exp(\beta_0+\beta_1)\div \e
 
 :::
 
-**私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」**
+::: 
 
+::: voice-father
 お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ」
+::: 
 
-**私「前の話だと、Cox回帰はハザード比のモデルなんだっけ？」**
+::: voice-daughter
+私「前の話だと、Cox回帰はハザード比のモデルなんだっけ？」
+::: 
 
+::: voice-father
 お父さん「そういうこと。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。リンク関数はそれぞれ別の関数になる」
+::: 
 
-**私「じゃあ最後にさ、完全分離について説明してくれない？この前の解析で、なにが起きたのか知りたいんだよね」**
+::: voice-daughter
+私「じゃあ最後にさ、完全分離について説明してくれない？この前の解析で、なにが起きたのか知りたいんだよね」
+::: 
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
+::: {.callout-note appearance="simple" title="ロジスティック回帰の推定"}
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ロジスティック回帰の推定**
+**推定に用いられる関数**
 
 先ほど述べたアウトカム$Y_1,Y_2,...,Y_N$の同時確率の式に、データ$y_1,y_2,...,y_N$を代入すると、$\pi_i$の式が得られます。ただし、$\pi_i$は$\beta_0,\beta_1,...,\beta_{p-1}$の関数です。したがって、同時確率の式は、$L(\beta_0,\beta_1,...,\beta_{p-1})$というように、$\beta_0,\beta_1,...,\beta_{p-1}$の関数とみなすことができます。この関数を尤度関数といいます。
 
@@ -204,32 +221,58 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 **多重共線性**
 
 二つ目は、多重共線性（multi-colinearity）です。これは、共変量同士の相関が強すぎることを意味します。仮に、年収が年齢に完全に比例する状況（つまり相関が1）を考えてみてください。このとき、ロジスティック回帰を用いて年収と年齢の影響を分離することはできません。これが多重共線性の一例です。言い換えると、相関の高い共変量は、推定が不安定になるため同時にロジスティック回帰に含めるべきではありません。
-
 :::
 
-**私「あれ？回帰分析って最小2乗法を使うんじゃないの？尤度関数？」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「あれ？回帰分析って最小2乗法を使うんじゃないの？尤度関数？」
+::: 
 
+::: voice-father
 お父さん「大学の教科書ではそう教わるけどね。最小2乗法を使うのは連続データのときだけかな。別の推定方法もいろいろある」
+::: 
 
-**私「ふーん。新しい方法がいろいろありそうってのは知ってるよ。AIとか機械学習とか」**
+::: voice-daughter
+私「ふーん。新しい方法がいろいろありそうってのは知ってるよ。AIとか機械学習とか」
+::: 
 
+::: voice-father
 お父さん「まあね。はやりだよね」
+::: 
 
-**私「統計学と機械学習ってどう違うの？同じ？」**
+::: voice-daughter
+私「統計学と機械学習ってどう違うの？同じ？」
+::: 
 
+::: voice-father
 お父さん「お隣さんって感じかな。データを解析するって意味では同じことをしているわけだし、機械学習の教科書でも、ロジスティック回帰とかロジスティック判別とかは扱うもの。統計学で習うROC曲線なんかは、機械学習の範疇な気がするし。重なる部分は多いよ。まあ、機械学習の方がたくさんのパラメータを推定する傾向にあるとはいえるかな。ロジスティック回帰よりニューラルネットワークの方が、モデルも複雑だし、パラメータの数も多い。さっき共変量の数を減らそうっていったでしょ。機械学習では、ああいうパラメータの数を減らすって発想はしない」
+::: 
 
-**私「パラメータの数が少ないのが統計学の特徴ってわけ？」**
+::: voice-daughter
+私「パラメータの数が少ないのが統計学の特徴ってわけ？」
+::: 
 
+::: voice-father
 お父さん「うーん、でもそれは程度問題かもしれない。一番の違いはなんだろうね。統計学は、統計的推測が基礎にあるってことかな。統計的推測っていうのは、標本から母集団を調べるっていう考え方のこと。手法でいうと、p値とか信頼区間とか、ああいうやつね。パラメータの数が多すぎると、これらの手法は性能が下がるんだ」
+::: 
 
-**私「機械学習に統計的推測って考え方はないの？」**
+::: voice-daughter
+私「機械学習に統計的推測って考え方はないの？」
+::: 
 
+::: voice-father
 お父さん「機械学習やってる人も統計学は学んでいるから、ないとはいわないけど、あんまりこだわってないんじゃない？画像認識するとき、p値なんていらないでしょ」
+::: 
 
-**私「そういうもんかな。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」**
+::: voice-daughter
+私「そういうもんかな。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
+::: 
 
+::: voice-father
 お父さん「ん？思ったより芯を食った説明ができてるじゃない。さすがだね」
+::: 
+
+:::::::::::::::::::::::::::::::::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
