--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -199,7 +199,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「納得。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？」
+私「納得。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？なんで省いちゃうのよ」
 :::
 
 ::: voice-father
@@ -207,7 +207,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「確かにね。再発前に亡くなるケースって、感染症とか、交通事故とか、原病に関係ないかもしれない」
+私「確かにね。よく考えたら、再発前に亡くなるケースって、感染症とか、交通事故とかだね。がん治療や原病とは関係ないかもしれない」
 :::
 
 ::: voice-father
