--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -150,8 +150,12 @@ a:hover {
 ### 疾患リスクとターゲット集団
 
 ::::::::::::::::::::::::::::::::: dialogue
+
+私「コーヒーお代わりいる？お父さん」
+:::
+
 ::: voice-father
-お父さん「ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
+お父さん「ああ、ありがとう。おいしいね。ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
 :::
 
 ::: voice-daughter
@@ -179,20 +183,33 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="寄与割合とその関連指標"}
+::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction/excess fraction）という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団をターゲットとするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
+あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、population attributable fractionと呼ばれています。$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
+ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
+
+-   Population attributable fraction
+
+    $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ふーん。集団寄与割合はリスク比だけじゃなくて、リスク因子の割合がわからないと計算できないんだね。でも、まあ、これもワクチン有効率と同じパターンだね。パーセントっていわれるとただの割合と思っちゃう。集団寄与割合のパーセントって、よく考えるとなにを意味するのか謎」
+:::
+
+::: voice-father
+お父さん「うん。でもね、問題はそこだけじゃない。集団寄与割合にすごく似た別の指標が説明なしに使われることが結構あるってこと。リスク因子の割合が不要な指標もあって、集団寄与割合と混同されていることもある。実はこれはワクチン有効率とほとんど同じ式だったりする」
+:::
+::::::::::::::::::::::::::::::::: 
+
+::: {.callout-note appearance="simple"  title="寄与割合とその関連指標2"}
 曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
 -   Excess fraction
 
     $EF=\frac{\pi_1-\pi_2}{\pi_1}=1-\frac{1}{RR}$
-
-また、excess fractionのターゲット集団を群1から集団全体（群1+群2）にした指標は、population attributable fractionと呼ばれています。$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
-
--   Population attributable fraction
-
-    $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
 その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
 
@@ -226,11 +243,11 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「これもワクチン有効率と同じだね。パーセントっていわれるとただの割合と思っちゃう。よく考えると、Excess fractionなんて、パーセントがなにを意味するのか謎」
+私「余計にわかんない。使い分けもわかんないしパーセントがなにを意味するのか謎」
 :::
 
 ::: voice-father
-お父さん「そっか、そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
 :::
 
 ::: voice-daughter
