--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -139,7 +139,7 @@ a:hover {
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Logistic regression I
+# Story and Quiz − Adjusting for bias I
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias, paper writing
@@ -149,19 +149,32 @@ a:hover {
 
 ### どうしてオッズ比が無限大になっちゃったの？
 
--   前回までのあらすじ
+::: {.callout-note appearance="simple" collapse="true" title="前回までのあらすじ"}
+はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、女医である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。その後いくつか質問するうちに、父のことを「こいつ使える」と思い始めたのだった。
+:::
 
-    はじめて研究に取り組む娘と統計家の父。父に研究仮説は"PICO"を"PECO"で整理するといいとアドバイスされ、女医である娘は、がんサバイバーにおけるストーマ造設と復職状況の関係を調査することに決める。その後いくつか質問するうちに、父のことを「こいつ使える」と思い始めたのだった。
 
-**私「これみてよ、お父さん」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「これみてよ、お父さん」
+:::
 
+::: voice-father
 お父さん「ん？どうしたの、この資料」
+:::
 
-**私「前に相談したがんサバイバーの復職状況を調べる研究についてなんだけどね、うちの診療科だけだけど調査票が集まったから、解析してみたの。その結果をまとめた資料よ」**
+::: voice-daughter
+私「前に相談したがんサバイバーの復職状況を調べる研究についてなんだけどね、うちの診療科だけだけど調査票が集まったから、解析してみたの。その結果をまとめた資料よ」
+:::
 
+::: voice-father
 お父さん「ああ、あれね。ストーマ造設と復職率の関連を調べることにしたんだっけ。資料のどこをみればいいの？」
+:::
 
-**私「この表なんだけど。教えられた通り、ロジスティック回帰をしてみたんだ。その結果をまとめたよ。どうかな」**
+::: voice-daughter
+私「この表なんだけど。教えられた通り、ロジスティック回帰をしてみたんだ。その結果をまとめたよ。どうかな」
+:::
+:::::::::::::::::::::::::::::::::
 
 | パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   | χ2    | p値    |
 |------------|--------|--------|----------|---------------|-------|--------|
@@ -171,23 +184,35 @@ a:hover {
 | SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
 | INCOME     | 1      | -0.00  | 0.00     | -0.00～0.00   | 0.58  | 0.4481 |
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「ふむふむ。よくあるロジスティック回帰の結果だね。この表、上司にみせるんでしょ。その前にちょっと手直しした方がいいかもね」
+:::
 
-**私「やっぱり？そんな気がしてみてもらおうと思ったんだ」**
+::: voice-daughter
+私「やっぱり？そんな気がしてみてもらおうと思ったんだ」
+:::
 
+::: voice-father
 お父さん「まず、Intercept、STOMA、AGE、SEX、INCOMEっていうのがわからないよ。Intercept以外は共変量（covariates）のことだよね」
+:::
 
-**私「共変量って？」**
+::: voice-daughter
+私「共変量って？」
+:::
 
+::: voice-father
 お父さん「共変量っていうのは、ロジスティック回帰に入れる説明変数のこと。復職率を規定する要因っていえばいいかな。それと、Interceptは回帰式でいう切片項のこと。統計ソフトウェアのアウトプットをそのまま表にしたんでしょ？きっとストーマ、年齢、性別、年収という変数を使ったんだと思うんだけど、データ上の変数名がそのままになっている。それに、出てきた数字をぜんぶ載せると、表がうるさくない？」
+:::
 
-**私「たしかに」**
+::: voice-daughter
+私「たしかに」
+:::
 
-お父さん「たしかにじゃなくてさ。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ」
-
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **表を作成するとき注意すべきことのリスト**
+::: voice-father
+お父さん「たしかにじゃなくてさ。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
+:::
+:::::::::::::::::::::::::::::::::
 
 -   読者の立場で考える
 -   表のフォーマットに従う
@@ -195,31 +220,48 @@ a:hover {
 -   表タイトル・脚注を利用して補足情報を伝える
 -   数え尽くしの原則を守る
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「ロジスティック回帰からいろんな指標が出せるけど、表にはオッズ比、95%信頼区間、p値だけあれば普通はじゅうぶんだよ」
 :::
 
-お父さん「ロジスティック回帰からいろんな指標が出せるけど、表にはオッズ比、95%信頼区間、p値だけあれば普通はじゅうぶんだよ」
+::: voice-daughter
+私「それはこの表にも載ってるよね」
+:::
 
-**私「それはこの表にも載ってるよね」**
-
+::: voice-father
 お父さん「載っていません。この表の”推定値”は、みたところ回帰係数の値でしょ。それをオッズ比（odds ratio）に換算しないといけない。換算するには、回帰係数βの指数をとって、OR=exp(β)を求めればいい」
+:::
 
-**私「そうなのか。ストーマのオッズ比はexp(1.41)=4.1倍ってことね。あれ？exp(25.72)を計算してみると、パソコンに表示できないくらいに大きい数字になったんだけど。ほとんど無限大に近い数字だ。性別の影響が強いのかな。年収はexp(-0.00)？なんか変だな」**
+::: voice-daughter
+私「そうなのか。ストーマのオッズ比はexp(1.41)=4.1倍ってことね。あれ？exp(25.72)を計算してみると、パソコンに表示できないくらいに大きい数字になったんだけど。ほとんど無限大に近い数字だ。性別の影響が強いのかな。年収はexp(-0.00)？なんか変だな」
+:::
 
+::: voice-father
 お父さん「これはよくあるトラブルだよ」
+:::
 
-**私「そうなの？」**
+::: voice-daughter
+私「そうなの？」
+:::
 
+::: voice-father
 お父さん「復職しなかった患者さんはほとんど女性だったんじゃない？擬似完全分離（quasi-complete separation）っていう計算上の問題が起きちゃってて、性別の回帰係数を、うまく推定できていないんだ」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **完全分離**
+::: {.callout-note appearance="simple" title="完全分離"}
 
 ロジスティック回帰の回帰係数は、最尤法という汎用的な推定方法によって計算されます。ただし、データから必ずしも最尤法の解が求まるわけではありません。これが完全分離（complete separation）や擬似完全分離（quasi-complete separation）という問題です。完全分離や擬似完全分離は、サンプルサイズに比べ、共変量の数が多すぎるときに生じます。これらの問題が起きると、回帰係数が求まらなかったり、不安定だったりするわけですから、共変量の数の削減や、最尤法以外の推定方法の利用など、なんらかの対処が必要になります。
-
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「というわけで、正しい計算ができていないわけだから、ロジスティック回帰の結果を示すのはやめた方がいい。性別だけじゃなくて年収も問題だね。単位が円のまま扱うと、桁が大きすぎて数字が読めない。単位を万円にして、年収が1万円増えたら復職率がどう変化するかを示すといいんじゃないかな。性別と年収の扱いは気になると思うけど、今はこれくらいにしよう。表の体裁を直してあげるよ」
+:::
+
+::::::::::::::::::::::::::::::::: 
 
 |              | オッズ比 | 95%信頼区間 | p値  |
 |--------------|----------|-------------|------|
@@ -233,17 +275,25 @@ a:hover {
 
 \*手術後1年以内の復職をアウトカムとした多変量ロジスティック回帰
 
-**私「あれ？オッズ比4.13倍ってことは、復職率がだいたい4倍になったってこと？そんなことある？」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「あれ？オッズ比4.13倍ってことは、復職率がだいたい4倍になったってこと？そんなことある？」
+:::
 
+::: voice-father
 お父さん「違う違う。あのね、オッズ比はオッズの比をとったもの。オッズっていうのは、復職率を$\pi$で表すと、それを$\pi/(1-\pi)$と変換したものなんだ。$\pi$が0に近いときは、オッズ比は$\pi$の比に近い値になるんだけど、復職率の場合はそうじゃないよね。今回は、復職できない確率が約4倍になったって意味だよ」
+:::
 
-**私「わかりにくいのう」**
+::: voice-daughter
+私「わかりにくいのう」
+:::
 
+::: voice-father
 お父さん「じゃあ、どこに気を付けて手直ししたか説明するね。ロジスティック回帰では、共変量はなにで、どう扱ったかを正確に伝えることが大切なんだ。データをみると、年齢は65歳未満か以上かで分類した2値データみたいだね。そういうときは、何歳で分類したか、どの分類を基準にしたかわからないと、結果を読み取れない。また、連続データでは、忘れがちだけど単位が必要。年収の単位を円から万円にして、表に追記しておいたよ」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **注意事項1. フォーマット**
+::: {.callout-note appearance="simple" title="注意事項1. フォーマット"}
 
 論文で示される表には、決められたフォーマットがあります。表は、行（row）と列（column）から構成され、行と列は概念的には対称ですが、視覚的には役割が異なります。英語圏では、表は左から右に、行ごとに読むことが慣習になっています。そのため、このサイトに示されている表のように、縦線で区切ることはしません。
 
@@ -253,9 +303,7 @@ a:hover {
 
 :::
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **注意事項2. 単位・表示桁数**
+::: {.callout-note appearance="simple" title="注意事項2. 単位・表示桁数"}
 
 表では測定単位（unit）を明らかにすることが重要です。臨床検査値を扱う論文を投稿するときは、その雑誌の編集方針をみて、どのような単位系を採用しているか確認しましょう。
 
@@ -265,13 +313,17 @@ a:hover {
 
 :::
 
-**私「表の作り方をご助言いただけるのはありがたいんだけどさ、肝心のロジスティック回帰はどうすればいいんだろ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「表の作り方をご助言いただけるのはありがたいんだけどさ、肝心のロジスティック回帰はどうすればいいんだろ」
+:::
 
+::: voice-father
 お父さん「擬似完全分離を避けるには、共変量の数を削らすのがわかりやすい。今回はサンプルサイズが不足しているみたいだから、他の共変量はすべて使わないで、単にストーマ造設と復職率だけの関連を調べたらどうかな？その場合も、通常の$\chi^2$検定は使わない方がいいよ。Fisherの正確検定とClopper-Pearson信頼区間っていう方法が推奨されている」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **2値データの解析においてサンプルサイズが不足したときの指針**
+::: {.callout-note appearance="simple"  title="2値データの解析においてサンプルサイズが不足したときの指針"}
 
 -   ロジスティック回帰の共変量の数を減らす（目安としてパラメータの数のおよそ5倍のイベント数が必要）
 -   $\chi^2$検定ではなくFisher正確検定を用いる
@@ -279,13 +331,24 @@ a:hover {
 
 :::
 
-**私「でも、ロジスティック回帰で交絡因子を調整しなさいっていったのはお父さんなんだよ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「でも、ロジスティック回帰で交絡因子を調整しなさいっていったのはお父さんなんだよ」
+:::
 
+::: voice-father
 お父さん「そうだね、それは重要な問題だよね。じゃあ、ストーマ保有者と非保有者で、年齢、性別、年収の分布がどれくらい違うかをまず確認しようか。前にも話したとおり、年収を尋ねたことでバイアスが生じていないかとか、年収を尋ねて欠測が多いんじゃないかとか、いろいろ気になるし。もし分布が揃ってたら、調整しなくても影響は小さいかもしれない」
+:::
 
-**私「あ、その表なら資料にあるよ」**
+::: voice-daughter
+私「あ、その表なら資料にあるよ」
+:::
 
+::: voice-father
 お父さん「じゃあ、あとはストーマ造設と復職率の関連を表にするだけだね。資料には、以下の表1と表2を載せればいいよ」
+:::
+
+:::::::::::::::::::::::::::::::::
 
 表1. 20XX～20YY年にZZ病院で手術を受け、がんサバイバー復職率調査に回答した直腸がん患者80人の背景因子の記述
 
@@ -312,25 +375,41 @@ a:hover {
 
 †Fisher正確検定
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「集団のアウトカムを比較したいときは、その前に表1のようにそれぞれの集団の背景因子を記述するべきだよ。ストーマ保有者は20人しかいなくて、非保有者に比べて、平均年齢が低くて、女性が多いわけだ。やっぱり最終的にはロジスティック回帰で、背景因子の違いを調整しないといけないかもね。現時点での調査の回答率はどうだった？」
+:::
 
-**私「調査票は100人に送って、80人から回収できたから、回答率は80%かな」**
+::: voice-daughter
+私「調査票は100人に送って、80人から回収できたから、回答率は80%かな」
+:::
 
+::: voice-father
 お父さん「項目ごとの無回答（item non-response）についてはどう？」
+:::
 
-**私「そっか、調査票を回収できたかと、項目ごとの回答があったかは別だもんね。年齢は全員回答してくれたよ。性別は1人記入していなかった。項目ごとの回答数まで、表に示した方がよかった？」**
+::: voice-daughter
+私「そっか、調査票を回収できたかと、項目ごとの回答があったかは別だもんね。年齢は全員回答してくれたよ。性別は1人記入していなかった。項目ごとの回答数まで、表に示した方がよかった？」
+:::
 
+::: voice-father
 お父さん「ううん、論文ではそこまで細かい数字は示さないことが多い。重要な変数が欠測してたりするなら別だけどね。たとえばさ、ロジスティック回帰を行うとき、性別不明はどう扱ったの？」
+:::
 
-**私「統計ソフトウェアのマニュアル調べたら、欠測は自動的に除外されるんだって」**
+::: voice-daughter
+私「統計ソフトウェアのマニュアル調べたら、欠測は自動的に除外されるんだって」
+:::
 
+::: voice-father
 お父さん「そうすると解析対象の人数が80人じゃなくて79人に減るんだから、表を作るときにそこを説明しておかないといけないんじゃない？一般に、ロジスティック回帰の結果を示す表だけだと、どんなデータかわかりにくいっていう問題がある。復職できなかったのは3人しかいないって、表2をみるまで気づかなかったよ？まだ1施設からのデータしか集まってないからでしょ。それじゃあロジスティック回帰はしたくてもできないよね」
+:::
 
-**私「確かにね。そのあたりの状況を、読者に伝えなきゃって気持ちが足りなかったみたい」**
+::: voice-daughter
+私「確かにね。そのあたりの状況を、読者に伝えなきゃって気持ちが足りなかったみたい」
+:::
+:::::::::::::::::::::::::::::::::
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **注意事項3. 表タイトル・脚注**
+::: {.callout-note appearance="simple"  title="注意事項3. 表タイトル・脚注"}
 
 読者が表を読むときのことを想像してみてください。最初に目にするのは、表に示された結果自体ではなく、表タイトルの情報です。簡潔な表タイトルをよく目にしますが、これはもったいないことです。表1、表2の表タイトルには、調査が行われた状況、対象疾患、人数、統計解析の目的などが含まれています。表タイトルを決めるときは、可能な限り多くの情報を伝えるように工夫しましょう。
 
@@ -340,9 +419,8 @@ a:hover {
 
 :::
 
-::: callout-note
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **注意事項4. 数え尽くしの原則**
+::: {.callout-note appearance="simple"  title="注意事項4. 数え尽くしの原則"}
 
 統計解析の経験があるものなら誰でも、様々な理由で対象者が除外されるため、個々の解析で、人数が必ずしも同じにならないことを知っているものです。透明性を高めるために、統計解析ごとに、何人が対象となったか報告するべきです。
 
@@ -350,19 +428,32 @@ a:hover {
 
 :::
 
-**私「ちなみにお父さん、もし”臨床疑問と研究仮説”で例を挙げてくれたときの研究仮説3みたいに、研究の目的が復職率と関連する因子の探索だとしたら、何か変わることはある？」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ちなみにお父さん、もし”臨床疑問と研究仮説”で例を挙げてくれたときの研究仮説3みたいに、研究の目的が復職率と関連する因子の探索だとしたら、何か変わることはある？」
+:::
 
+::: voice-father
 お父さん「どんな特徴を持った患者が、復職が難しいのか、予測因子をみつけたいってことかな。予測因子の候補となるデータがあるなら、それをロジスティック回帰の共変量に入れることで、予測因子の探索を行うことができるよね」
+::: 
 
-**私「うんうん」**
+::: voice-daughter
+私「うんうん」
+:::
 
+::: voice-father
 お父さん「予測因子の探索では、特定の因子に関心がないってことが第一の違いだよ。ストーマと復職率の関連を調べるときは、ストーマのオッズ比やp値を求めることがゴールでしょ。予測因子の探索では、予測因子の候補をできるだけたくさん集めて、どの因子をモデルに入れたら予測精度が高いか、逆にどの因子は要らないかを調べることがゴールになる。これを変数選択っていうんだ」
+::: 
 
-**私「ゴールは違ってもさ、p値を使えばよくない？有意な因子をモデルに入れたらいいんでしょ」**
+::: voice-daughter
+私「ゴールは違ってもさ、p値を使えばよくない？有意な因子をモデルに入れたらいいんでしょ」
+:::
 
+::: voice-father
 お父さん「そういうやり方もあるけどね。予測2乗誤差、ROC曲線、AICといった予測精度の指標はいっぱいあって、それを利用することも多い。もうひとつ注意した方がいいのは、予測因子の候補や、どのような基準で変数選択するかを、事前に決めておくこと。事前に決めておかないと、どうしても研究者の主観が入っているんじゃないかって批判されるからね」
+:::
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
 
@@ -376,13 +467,12 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 4.  1、2、3すべて誤り
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です**
 
 これは単位を換算にするにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
 :::
-
-
 
 
 
