--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -139,7 +139,7 @@ a:hover {
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Logistic regression III
+# Story and Quiz − Adjusting for bias III
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, estimation
@@ -149,23 +149,37 @@ a:hover {
 
 ### 数式を使ってロジスティック回帰を教えてよ
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
 お父さん「ロジスティック回帰はね、医学研究でよく使うから知っておいた方がいいよ。簡単にいうと、2値データのための回帰モデルの一種。ストーマ造設、年齢、性別、年収といった共変量が、復職の有無のような2通りの値をとるアウトカムとどの程度相関するかを、調べることができる」
+::: 
 
-**私「もうちょっと統計っぽく教えてよ」**
+::: voice-daughter
+私「もうちょっと統計っぽく教えてよ」
+::: 
 
+::: voice-father
 お父さん「ん？統計手法には、パラメトリック法とノンパラメトリック法があるけど、ロジスティック回帰はパラメトリックモデルの一種として位置づけられる。最近の教科書では、一般化線型モデルのひとつとして扱われることが多いかな」
+::: 
 
-**私「そういうんじゃなくてさ。最初から順序立てて教えてほしいっていうか」**
+::: voice-daughter
+私「そういうんじゃなくてさ。最初から順序立てて教えてほしいっていうか」**
+::: 
 
+::: voice-father
 お父さん「数式使っていいの？」
+::: 
 
-**私「うん。数式でてくると、ところどころわからないんだけど。ごまかされるのもいやだから、一度正式な説明を聞いてみたいって思って」**
+::: voice-daughter
+私「うん。数式でてくると、ところどころわからないんだけど。ごまかされるのもいやだから、一度正式な説明を聞いてみたいって思って」
+::: 
 
+::: voice-father
 お父さん「じゃあ定義から話すかな」
+::: 
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ロジスティック回帰**
+::: {.callout-note appearance="simple" title="ロジスティック回帰"}
 
 アウトカム$Y_1,Y_2,...,Y_N$が、0または1で表される個人の反応の有無を表す2値変数で、$\Pr (Y_i=1)=\pi_i$という確率で独立に分布しているとします。このとき$N$人の対象者の同時分布は
 
@@ -183,13 +197,18 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 
 :::
 
-**私「ふむふむ。まず、**$Y_1,Y_2,...,Y_N$っていうのは、$N$人の対象者の復職の有無みたいなものね。その同時分布の式が出てきた。つまり、ロジスティック回帰も、確率分布の一種なんだ」
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ふむふむ。まず、**$Y_1,Y_2,...,Y_N$っていうのは、$N$人の対象者の復職の有無みたいなものね。その同時分布の式が出てきた。つまり、ロジスティック回帰も、確率分布の一種なんだ」
+::: 
 
+::: voice-father
 お父さん「そう。ただし、確率分布の式に、共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が含まれていて、アウトカムと共変量の関連の強さを、回帰係数が決めるんだ。確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、アウトカムと共変量の関係は、ロジット関数で結びつくと仮定していること」
+::: 
 
-::: callout-note
+::::::::::::::::::::::::::::::::: 
 
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **リンク関数とロジット関数**
+::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
 
 個人レベルのパラメータと共変量との関係を結びつける1対1の単調な変換
 
@@ -203,13 +222,17 @@ $g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
 
 :::
 
-**私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」**
+::: 
 
+::: voice-father
 お父さん「そうだよね。ロジット関数も関数の一種だから、グラフにした方が特徴がつかみやすい。次の説明だとどうかな」
+::: 
+::::::::::::::::::::::::::::::::: 
 
-::: callout-note
-
-<img src="https://www.notion.so/icons/alert_blue.svg" alt="https://www.notion.so/icons/alert_blue.svg" width="40px"/> **ロジット関数の形状**
+::: {.callout-note appearance="simple" title="ロジット関数の形状"}
 
 仮に共変量が1個で、連続データだったとしましょう。確率$\pi_i$と共変量$X_i$の関係は、ロジット関数を通じて
 
@@ -225,9 +248,15 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
 
 :::
 
-**私「やっとイメージがわいた。ロジット関数って、確率と共変量との関係を表してるんだ。どれくらい年齢が上がると、復職できる確率が下がるか、みたいなことね」**
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「やっとイメージがわいた。ロジット関数って、確率と共変量との関係を表してるんだ。どれくらい年齢が上がると、復職できる確率が下がるか、みたいなことね」
+::: 
 
+::: voice-father
 お父さん「そういうこと」
+::: 
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
