--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -154,16 +154,20 @@ a:hover {
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「あれ、お風呂あがったの。コーヒーでも淹れようか」
+:::
+
 ::: voice-daughter
-私「コーヒー飲む？お父さん」
+私「カフェラテ」
 :::
 
 ::: voice-father
-お父さん「ああ、ありがとう。おいしいね」
+お父さん「いつものやつ？あれはカフェラテじゃなくて、ただのコーヒーミルクだよ」
 :::
 
 ::: voice-daughter
-私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンについてなんだけどね。外来で"有効率95%"って患者さんに聞かれたんだけど、こういう統計って私もちょっと混乱するんだよね」
+私「いいのよ。そういえばこの前出たワクチンについてなんだけどね。外来で"有効率95%"って患者さんに聞かれたんだけど、こういう統計って私もちょっと混乱するんだよね」
 :::
 
 ::: voice-father
