--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -150,12 +150,12 @@ a:hover {
 ### 疾患リスクとターゲット集団
 
 ::::::::::::::::::::::::::::::::: dialogue
-
-私「コーヒーお代わりいる？お父さん」
+::: voice-daughter
+私「コーヒーおかわりいる？お父さん」
 :::
 
 ::: voice-father
-お父さん「ああ、ありがとう。おいしいね。ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
+お父さん「ああ、ありがとう。ワクチンとは別の話題なんだけど、喫煙歴のあるがんの患者さんって、減ったと思う？」
 :::
 
 ::: voice-daughter
