--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -159,7 +159,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-父「ん？遅くまでなに読んでるの？コーヒーでも淹れようか」
+父「ん？寒くなってきたのに、遅くまでなに読んでるの？コーヒーでも淹れようか」
 :::
 
 ::: voice-daughter
