--- a/jp/frequentist-3.qmd
+++ b/jp/frequentist-3.qmd
@@ -150,8 +150,12 @@ a:hover {
 ### 正しくp値を解釈するための考え方
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ただいま、お父さん。そろそろダウン出さなきゃだめだね。あ、ホットコーヒーもらっていい？」
+:::
+
 ::: voice-father
-お父さん「JCOG9502の論文で生存曲線とp値の話をしたことがあったよね（Sasako, et al. 2006）。そのとき、気になったんだけどさ。どうしてp値が0.05より小さいと統計学的に有意って言ったの？」
+お父さん「そろそろ帰る時間だと思って、たっぷり淹れてた。そうそう、JCOG9502の論文で生存曲線とp値の話をしたことがあったよね（Sasako, et al. 2006）。そのとき気になったんだけどさ。どうしてp値が0.05より小さいと統計学的に有意って言ったの？」
 :::
 
 ::: voice-daughter
