--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -151,11 +151,11 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-父「コーヒー淹れたよ」
+父「熱めのコーヒー淹れたよ。ミルクがすきなのはわかるけど、たっぷり入れると冷めちゃうでしょ」
 :::
 
 ::: voice-daughter
-私「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
+私「ありがとう、ちょうどいいわ。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
