--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -155,11 +155,11 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さんが、さっき、どの関数を使うかもアウトカムによって違うんだよっていってたじゃない？あれ、いまいちピンとこないんだけど。データなんて、全部数字じゃないの？」
+私「コーヒー淹れたから、もう少し相談させてよ。さっきRの話がで他でしょ。そのとき、どの関数を使うかもアウトカムによって違うんだよっていってたじゃない？あれ、いまいちピンとこないんだけど。データなんて、全部数字じゃないの？」
 :::
 
 ::: voice-father
-お父さん「数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データなどの分類データ、計数データ、生存時間データの4つ」
+お父さん「いいね、最近秋めいてきたからコーヒーがあるとありがたい。数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データなどの分類データ、計数データ、生存時間データの4つ」
 :::
 
 ::: voice-daughter
