--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -183,15 +183,16 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1"}
+::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1. 集団寄与割合"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために寄与割合（attributable fraction/excess fraction）という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団をターゲットとするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
-あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、population attributable fractionと呼ばれています。$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
-ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
+あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、population attributable fractionと呼ばれています。ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
 
 -   Population attributable fraction
 
-    $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
+$$
+PAF=\frac{p(RR-1)}{p(RR-1)+1}
+$$
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
@@ -204,26 +205,37 @@ a:hover {
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="寄与割合とその関連指標2"}
+::: {.callout-note appearance="simple"  title="寄与割合とその関連指標2. 集団全体とはターゲット集団が別の寄与割合"}
 曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
 -   Excess fraction
-
-    $EF=\frac{\pi_1-\pi_2}{\pi_1}=1-\frac{1}{RR}$
+$$
+EF = \frac{\pi_1 - \pi_2}{\pi_1} = 1 - \frac{1}{RR}
+$$
 
 その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
 
 -   Preventable fraction
-
-    $PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
+$$
+PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
+$$
 
 | 指標 | ターゲット集団 | 何を表す？ | いつ使う？ |
 |------|------|---------------------------|-------------|------------|
-| Excess fraction（寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
-| Preventable fraction（予防寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
-| Population attributable fraction（集団寄与割合） | **曝露+非曝露** | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
+| PAF（集団寄与割合） | **曝露+非曝露** | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
+| EF（寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
+| PF（予防寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「余計にわかんない。使い分けもわかんないしパーセントがなにを意味するのか謎」
+:::
+
+::: voice-father
+お父さん「まあコーヒーを飲んでゆっくり考えよう。まずは具体的な計算結果をみてみてよ」
+:::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  title="コホート研究の数値例"}
 
@@ -243,11 +255,11 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「余計にわかんない。使い分けもわかんないしパーセントがなにを意味するのか謎」
+私「同じパーセントでも、リスク差の2.5%とexcess fractionの74%は印象がだいぶ違う」
 :::
 
 ::: voice-father
-お父さん「そうだよね。あのね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「でしょ。それにね、疾患リスクで考えるから混乱しがちなのかもしれない。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
 :::
 
 ::: voice-daughter
@@ -259,7 +271,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」**
+私「えっと、がん検診陽性の2人の生存期間は平均15年でしょ。がん検診陰性の2人の生存期間は平均10年。だから、(15-10)/10=0.5だから、50%の延長」
 :::
 
 ::: voice-father
@@ -329,7 +341,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていいうのは、リスク比やオッズ比も同じだけどね」
+お父さん「そういうこと。寄与割合は、時間とともに変化することがあり得るんだ。時間が隠れているっていうのは、リスク比やオッズ比も同じだけどね」
 :::
 
 ::: voice-daughter
