--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -302,19 +302,52 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 
 上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
 
--   ハザード比（指数分布を仮定）
-
-    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(1-\pi_1)}{\mathrm{log}(1-\pi_2)}$
+$$
+HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(1-\pi_1)}{\mathrm{log}(1-\pi_2)}
+$$
 
 指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
 
--   ハザード比（比例ハザード性を仮定）
-
-    $HR=\frac{\lambda_1(x)}{\lambda_2(x)}$
+$$
+HR=\frac{\lambda_1(x)}{\lambda_2(x)}
+$$
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ちょっと疲れてきたな。えと、指数分布とCox比例ハザードモデルがあるわけね？でも同じ式じゃないかな？書き間違えてない？」
+:::
+
+::: voice-father
+お父さん「指数分布の式はね、ハザードが$x$に依存しないでしょ。つまりハザード自体が一定なんだ。Cox回帰の方は$\lambda_1(x)$と$\lambda_2(x)$は時間の関数なんだけど、ハザード比だけが一定っていうことを表している。これが比例ハザード性だよ。このKaplan-Meier曲線をみてよ（Mok, et al, 2009）。生存曲線がクロスした有名なケースなんだ」
+:::
+
+::: voice-daughter
+私「そうそう、数式ばっかじゃねむくなる」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple" title="比例ハザード性が崩れた臨床試験の例"}
+![](clinical-trial-3.png)
+:::
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「これはステージIIIB～IVの肺がん患者の臨床試験で、ゲフィチニブと化学療法を比較している。図Aでは6ヶ月まではゲフィチニブ群の無増悪生存確率が低く、それ以降は高くなっているでしょ。こういうときは比例ハザード性が成り立っていないから、ハザード比に意味はない」
+:::
+
+::: voice-daughter
+私「どうしてこうなっちゃったの？」
+:::
+
+::: voice-father
+お父さん「それはゲフィチニブがEGFR変異陽性の肺がん患者に特に有効だったからだといわれている。図Bは、EGFR変異陽性だった261人を対象にしたKaplan-Meier曲線なんだけど、生存曲線はクロスせず、最初から最後までゲフィチニブ群の方が化学療法群より予後がいいでしょ」
+:::
+
+::: voice-daughter
+私「そうだね。この試験のKaplan-Meier曲線では、治療成績が交差して、どっちが効くのか悩ましいってことはわかるよ、数式はともかくとして」
+:::
+
 ::: voice-father
 お父さん「はっきりいうとね、ハザードやハザード比が直感的にわかる人の方が少ないよ。だから安心していい」
 :::
@@ -385,6 +418,10 @@ summary(rr_at_20)
 ::: voice-daughter
 私「確かに。生存曲線を見るっていうのは、効果を表す数字に、時間の視点を加えるってことなんだね」
 :::
+
+### 文献
+
+- Mok TS, Wu YL, Thongprasert S, Yang CH, Chu DT, Saijo N, Sunpaweravong P, Han B, Margono B, Ichinose Y, Nishiwaki Y, Ohe Y, Yang JJ, Chewaskulyong B, Jiang H, Duffield EL, Watkins CL, Armour AA, Fukuoka M. Gefitinib or carboplatin-paclitaxel in pulmonary adenocarcinoma. N Engl J Med 2009;361(10):947-57
 
 :::::::::::::::::::::::::::::::::
 ### End of the episode on Effects and time
