--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -160,7 +160,7 @@ a:hover {
 
 - [Study design I](study-design-1.qmd)
 - [Study design II](study-design-2.qmd)
-- [Study design III]（近日公開）
+- [Study design III](study-design-3.qmd)
 - [Study design IV]
 - [Study design V]
 
