--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -300,7 +300,7 @@ $M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 
 群1と群2のアウトカムを比較する状況を考えましょう。群1の時点$x$の疾患リスクを$\pi_1$、群2の時点$x$の疾患リスクを$\pi_2$とします。さらに、それぞれの群のハザードを$\lambda_1$と$\lambda_2$、生存時間中央値を$M_1$と$M_2$とします。
 
-上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。
+上で述べた関係式を適用すると、指数分布の下で、ハザード比は以下のように表現することができます。ハザード比と、ハザード・生存時間中央値・疾患リスクの関係を表す式ですね。
 
 $$
 HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(1-\pi_1)}{\mathrm{log}(1-\pi_2)}
@@ -327,9 +327,7 @@ $$
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple" title="比例ハザード性が崩れた臨床試験の例"}
 ![](clinical-trial-3.png)
-:::
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
