--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -182,6 +182,9 @@ a:hover {
 お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう率（rate）とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の95%は、プラセボに比べて発症リスクが95%って意味だから」
 :::
 
+- ワクチン有効率（vaccine efficacy）は、疫学でいう率（rate）ではない
+- プラセボ効果との相対比較のための指標
+
 ::: voice-daughter
 私「ん？100人いたら95人に効くって意味じゃないの？」
 :::
@@ -205,15 +208,21 @@ a:hover {
 
 -   リスク差（risk difference、絶対リスク減少）
 
-    $RD={\pi_1}-{\pi_2}$
+$$
+RD={\pi_1}-{\pi_2}
+$$
 
 -   リスク比（risk ratio）
 
-    $RR=\frac{\pi_1}{\pi_2}$
+$$
+RR=\frac{\pi_1}{\pi_2}
+$$
 
 -   オッズ比（odds ratio）
 
-    $OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}$
+$$
+OR=\frac{\pi_1/(1-\pi_1)}{\pi_2/(1-\pi_2)}
+$$
 
 これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。上の式では群2を基準にとっています。
 :::
@@ -223,11 +232,15 @@ a:hover {
 
 -   Number needed to treat（NNT）
 
-    $NNT=\frac{1}{\pi_2-\pi_1}=-\frac{1}{RD}$
+$$
+NNT=\frac{1}{\pi_2-\pi_1}=-\frac{1}{RD}
+$$
 
 -   ワクチン有効率（vaccine efficacy、相対リスク減少）
 
-    $VE=\frac{\pi_2-\pi_1}{\pi_2}=1-RR$
+$$
+VE=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
+$$
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
@@ -269,7 +282,7 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 :::
 
 ::: voice-father
-お父さん「でも日常会話でそんなこと気にしてられないでしょ。だから誤解が多い。パーセント表記が逆に誤解を生んでる疫学の指標は、他にもあるよ」
+お父さん「でも日常会話でそんなこと気にしてられないでしょ。だから間違って使われることが多い。**パーセント表記が逆に誤解を生んでる**疫学の指標は、他にもあるよ」
 :::
 
 ::::::::::::::::::::::::::::::::: 
