--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -363,7 +363,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療B群の人は、少し遅い時計を持っている。ハザード比は、その2つの時計が“どれくらい違う速さで動くか”の比なんだ」
+お父さん「治療Aを受けた患者は、ちょっと速く進む時計を持っている。治療Bの人は、少し遅い時計を持っている。ハザード比は、2つの時計が“どれくらい違う速さで動くか”の比なんだ」
 :::
 
 ::: voice-daughter
@@ -379,13 +379,18 @@ $$
 :::
 
 ::: voice-father
-お父さん「それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
+お父さん「まとめると、このたとえ話の主張はこんなこと。
+
+>> ハザード比は、2つの時計が“どれくらい違う速さで動くか”の比に例えられる。
+>> 比例ハザード性が成り立たないと、最初は一方の治療が有利でも、途中から追いつかれることもある
+
+それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
 :::
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
 
-さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点tごとのリスク比も推定できます。
+さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、`cifmodeling`の`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点ごとのリスク比も推定できます。
 
 先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
 
@@ -410,11 +415,11 @@ summary(rr_at_20)
 :::
 
 ::: voice-father
-お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある」
+お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある。時間とともに効果の大きさが変化するなら、ハザード比に頼らず、時点ごとにリスクを比べる必要がある」
 :::
 
 ::: voice-daughter
-私「確かに。生存曲線を見るっていうのは、効果を表す数字に、時間の視点を加えるってことなんだね」
+私「確かに。生存曲線を見るっていうのは、因果効果に時間の視点を加えるってことなんだね」
 :::
 
 ### 文献
