--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -233,7 +233,11 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、p\<0.05は、αエラーだけをコントロールする基準だってこと」
+お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、
+
+>> p\<0.05は、αエラーだけをコントロールする基準
+
+だってこと」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -266,7 +270,11 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で”新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している”って述べている（Green, et al. 2013）。検出力90%はβエラー0.1のことね」
+お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で以下のように述べている（Green, et al. 2013）。
+
+>> 新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している
+
+検出力90%はβエラー0.1のことね」
 :::
 
 ::: voice-daughter
