--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -231,30 +231,29 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「うんうん。大学の授業だとね、研究で調べたい疑問がはっきりしないなら、"PICO"と"PECO"という要素を使って、研究をデザインしなさいって教えてるよ。研究の構造化ってやつ」
+お父さん「うんうん。大学の授業だとね、こんな風に教えてるよ。
+
+> 研究で調べたい疑問がはっきりしないなら、"PICO"と"PECO"という要素を使って
+> 研究をデザインしなさい
+
+研究の構造化ってやつ」
 :::
 
 ::: voice-daughter
 私「構造化？実際怪しいな、そこ。いや、聞いたことはある」
 :::
 
-
-::: voice-daughter
-私「構造化ねえ。聞いたことある言葉だけど、何をすればいいか、よくわからないんだよね」
-:::
-
 ::: voice-father
-お父さん「じゃあ軽く整理しよう。たとえばPICO/PECOのPは、患者（Patients）または集団（Population）の頭文字で、研究デザインの大切な1要素だってこと」
+お父さん「じゃあ軽く整理しよう。たとえばPICO/PECOのPは、患者（Patients）または集団（Population）の頭文字で、どのような患者が対象かが、研究デザインの大切な1要素だってこと」
 :::
+:::::::::::::::::::::::::::::::::
 
-::: voice-daughter
-私「Patientsはわかるよ。それ以外は？」
-:::
+- どのような患者が対象か（Patients/Population）
+- どのような要因に注目するか（Intervention/Exposure）
+- それを何と比較するのか（Comparison）
+- 患者にどのようなアウトカムが生じたのか（Outcome）
 
-::: voice-father
-お父さん「Pと同様に大切な、I/E（Intervention/Exposure）、C（Comparison）、O（Outcome）をあわせた4つの要素にあてはめて考えてみましょう、というわけ」
-:::
-
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ExposureとComparisonははじめて聞いたけど、私の場合はストーマ保有者と非保有者ってことだよね。Outcomeってなに？」
 :::
@@ -291,10 +290,10 @@ a:hover {
 ::: {.callout-note appearance="simple" title="臨床疑問と研究仮説"}
 日常診療をしていると、さまざまな疑問や知りたいことが生じることがあります。診療現場から生まれたありのままの疑問のことを、臨床疑問（clinical question）といいます。臨床研究をスタートするとき、意識してほしいのは、臨床疑問を研究仮説（research hypothesis）として表現することです。研究仮説は、研究デザインに最低限必要な要素で構成されます。たとえば典型的な臨床研究では、以下のような要素が含まれることが多いでしょう。
 
--   どのような患者が対象か（Patients/Population）
--   どのような要因に注目するか（Intervention/Exposure）
--   それを何と比較するのか（Comparison）
--   患者にどのようなアウトカムが生じたのか（Outcome）
+-   Patients/Population
+-   Intervention/Exposure
+-   Comparison
+-   Outcome
 
 上の会話で出てきた"PICO"や"PECO"は、この頭文字をとったものです。I（Intervention＝介入）かE（Exposure＝曝露）かは、その研究が薬の臨床試験のような介入研究か、今回のがんサバイバー調査のような観察研究かによって変わります。観察研究には患者さん一人ひとりを追跡するコホート研究、ある時点からさかのぼって調査するケースコントロール研究、ある1時点における要因とアウトカムを調査する横断研究がありますが、いずれもPECOで構造化が可能です。
 
