--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -196,9 +196,15 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを時間原点 （time origin）にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後の死亡は除外してはならない」
+お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを時間原点 （time origin）にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後に生じたイベントは除外してはならない」
 :::
+:::::::::::::::::::::::::::::::::
 
+- 時間原点を定義する
+- 追跡期間の目標を設定し、その時点までは可能な限り情報を収集する
+- 時間原点後に生じたイベントは除外したり、層別に用いたりしない
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「後からバイアスがあるとか言われたくないもんね。ふむふむ」
 :::
