--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -167,11 +167,11 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「そうだったね、最初の話題はワクチンの有効率だったけど、あれも発症リスクの指標だった。後はリスク比、オッズ比、ハザード比だっけ？」
+私「そうだったね、最初の話題はワクチン有効率だったけど、あれも発症リスクの指標だった。後はリスク比、オッズ比、ハザード比だっけ？」
 :::
 
 ::: voice-father
-お父さん「そんな話をしたね。じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学で注目するのは、それぞれの指標の数学的な性質なんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
+お父さん「そんな話をしたね。じゃあ、リスク比とオッズ比の話をしようか。コーヒー飲みながら気楽に聞いてね。統計学で注目するのは、**それぞれの指標の数学的な性質**なんだよね。オッズ比は数学的にいい面と悪い面がある。いいところは、”リスクの数値”と”1からリスクを引いた数値”が対称に出てくるような数式をしていること。生存確率と死亡確率をひっくり返しても同じっていったらいいかな」
 :::
 
 ::: voice-daughter
@@ -183,7 +183,7 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「ケース・コントロール研究って、データベースとかを使って後ろ向きに調査するやつね。これも疫学。不自然な数字になるのは困るじゃない。層別なんてしたことないけど」
+私「ケース・コントロール研究って、データベースとかを使って後ろ向きに調査するやつね。これも疫学。そうねえ、不自然な数字になるのは困るんじゃない？層別なんてしたこと私はないけど」
 :::
 
 ::: voice-father
@@ -261,7 +261,12 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、リスク差は、研究ごとにリスクが変動すると、その影響でばらついていた。一方で、リスク比やオッズ比は、研究を通じて安定していることがわかった。だから、リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
+お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、以下のようなことがわかった。
+
+>> リスク差は、研究ごとにリスクが変動すると、その影響にともなうばらつきが大きい。
+>> 一方で、リスク比やオッズ比は、研究間を通じて数値が安定していた。
+
+つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
 :::
 
 ::: voice-daughter
