--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -159,9 +159,16 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「いいね、最近秋めいてきたからコーヒーがあるとありがたい。数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのは、連続データ、2値データなどの分類データ、計数データ、生存時間データの4つ」
+お父さん「いいね、最近秋めいてきたからコーヒーがあるとありがたい。数字には違いないんだけどね。統計解析では、データの型がとても大事なんだ。代表的なのはこの4つ」
 :::
+:::::::::::::::::::::::::::::::::::::::
 
+- 連続データ
+- 2値データなどの分類データ
+- 計数データ
+- 生存時間データ
+
+::::::::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「連続データって、年齢とか血圧みたいな測るやつでしょ？2値データもわかるよ。私の調査で比較したいストーマ保有あり・なしとか」
 :::
