--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -194,12 +194,8 @@ a:hover {
 
 ![](study-design-2.png)
 
-::: voice-father
-お父さん「一般に、生存時間データは、特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」
-:::
-
 ::: voice-daughter
-私「納得。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？なんで省いちゃうのよ」
+私「ふんふん。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？なんで省いちゃうのよ」
 :::
 
 ::: voice-father
@@ -361,8 +357,12 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 :::
 
 ::: voice-father
-お父さん「違うよ。CIRの解析で、Kaplan–Meier推定量を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。
-でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
+お父さん「グラフ上は見分けられないからそう思っても仕方ないよね。でもこのふたつは区別してほしい。
+
+>> 誤解されやすいが、Kaplan–Meier曲線（生存関数）とAalen-Johansen曲線（累積発生関数）は
+>> まったく異なる統計手法である。
+
+CIRの解析で、Kaplan–Meier推定量を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
 :::
 
 ::: voice-daughter
