--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -263,8 +263,9 @@ a:hover {
 ::: voice-father
 お父さん「リスク差、リスク比、オッズ比で、どれがコントロール群のリスクの影響を受けやすいかを、55件のメタアナリシスのデータを使って調べた研究がある（Furukawa, Guyatt, Griffith 2002）。その結果、以下のようなことがわかった。
 
->> リスク差は、研究ごとにリスクが変動すると、その影響にともなうばらつきが大きい。
->> 一方で、リスク比やオッズ比は、研究間を通じて数値が安定していた。
+> - リスク差は、研究ごとにリスクが変動すると、その影響にともなうばらつきが大きい。
+
+> - リスク比やオッズ比は、研究間を通じて数値が安定していた。
 
 つまりね、指標によって解釈のしやすさや統計的な特徴が違うっていうこと。リスク差だけでも、リスク比やオッズ比のような比の指標だけでも、論文で示す情報としては不足があるっていうのが結論」
 :::
