--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -211,11 +211,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。
-
->>でも、死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。
-
-生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りがランダムに起きてることが前提になってる」
+お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。**これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りがランダムに起きてることが前提になってる」
 :::
 
 ::: voice-daughter
@@ -241,10 +237,13 @@ a:hover {
 ::: voice-father
 お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する”選択バイアス”といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、”情報バイアス”と呼んでいる。調査や観察研究の計画に関する授業では、バイアスを3種類に大別して考えるといいって教えている。
 
->> 研究デザインでは、バイアスを3種類に大別して、どんなバイアスが生じるか予測し、対策を考える。
->> - 選択バイアス（selection bias）
->> - 情報バイアス（information bias）
->> - 交絡（confounding）
+> 研究デザインでは、バイアスを3種類に大別して、どんなバイアスが生じるか予測し、対策を考える。
+
+> - 選択バイアス（selection bias）
+
+> - 情報バイアス（information bias）
+
+> - 交絡（confounding）
 
 一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
 :::
