--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -419,7 +419,7 @@ summary(rr_at_20)
 :::
 
 ::: voice-daughter
-私「確かに。生存曲線を見るっていうのは、因果効果に時間の視点を加えるってことなんだね」
+私「そういわれると納得感あるなあ、ハザード比だけ使えばいいって方がシンプルで私好みだったんだけど。生存曲線を見るっていうのは、因果効果に時間の視点を加えるってことなんだね」
 :::
 
 ### 文献
