--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -272,7 +272,40 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「統計解析のソフトウェアを使うとき一工夫が必要で、調査日までに復職しなかったという情報を、入力してあげなければならない。だから生存時間データは、“時間変数”と“打ち切り変数”という2つの変数が組になっているんだ。打ち切り変数は、“イベントが観察された”、“イベントが観察される前に打ち切りになった”を表す2値データ。時間変数は、この場合は“退院日から復職日までの期間”か“退院日から調査日までの期間”のどちらかになる」
+お父さん「統計解析のソフトウェアを使うとき一工夫が必要で、調査日の時点で復職しなかった、つまり復職の追跡が打ち切られたという情報を、入力してあげなければならない。だから生存時間データは、2つの変数が組になっているんだ。
+:::
+:::::::::::::::::::::::::::::::::
+
+- 時間変数
+- 打ち切り変数
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「打ち切り変数は、イベントが観察されたか、打ち切りになったかを表す2値データ。時間変数は、この場合は“退院日から復職日までの期間”か“退院日から調査日までの期間”のどちらかになる」
+:::
+
+::: {.callout-note appearance="simple"  title="生存時間データの入力"}
+
+生存時間データは2つの変数の組であるため、Rの関数に入力するときもペアで指定する必要があります。`survival`パッケージの`survfit()`や`coxph()`では、実は入力専用の関数`Surv()`を用意しています。入力の仕様はパッケージによってまちまちで、たとえば`mets`パッケージでは`Event()`が用いられています。`cifmodeling`パッケージの`cifplot()`は、`Surv()`と`Event()`の両方に対応しています。
+
+```{r echo=FALSE, warning=FALSE}
+library(survival)
+library(cifmodeling)
+
+survfit(Surv(time, status) ~ stoma,
+  data         = dat
+)
+cifplot(Surv(time, status) ~ stoma,
+  data         = dat,
+  outcome.type = "survival",
+  label.y      = "Overall survival"
+)
+cifplot(Event(time, status) ~ stoma,
+  data         = dat,
+  outcome.type = "survival",
+  label.y      = "Overall survival"
+)
+```
 :::
 
 ::: voice-daughter
