--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -236,23 +236,24 @@ a:hover {
 
 ::: voice-father
 お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する”選択バイアス”といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、”情報バイアス”と呼んでいる。調査や観察研究の計画に関する授業では、バイアスを3種類に大別して考えるといいって教えている。
+:::
+:::::::::::::::::::::::::::::::::
 
-> 研究デザインでは、バイアスを3種類に大別して、どんなバイアスが生じるか予測し、対策を考える。
+- 選択バイアス（selection bias）
 
-> - 選択バイアス（selection bias）
+- 情報バイアス（information bias）
 
-> - 情報バイアス（information bias）
+- 交絡（confounding）
 
-> - 交絡（confounding）
-
-一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+実際に研究を行うといろいろ理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
 :::
 
 ::: voice-daughter
 私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな。でも、自分の調査で失敗したくないから、メモしておくよ」
 :::
 ::::::::::::::::::::::::::::::::: 
-
 
 ::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
 
