--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -288,7 +288,7 @@ a:hover {
 
 生存時間データは2つの変数の組であるため、Rの関数に入力するときもペアで指定する必要があります。`survival`パッケージの`survfit()`や`coxph()`では、実は入力専用の関数`Surv()`を用意しています。入力の仕様はパッケージによってまちまちで、たとえば`mets`パッケージでは`Event()`が用いられています。`cifmodeling`パッケージの`cifplot()`は、`Surv()`と`Event()`の両方に対応しています。
 
-```{r R_code, echo=FALSE, warning=FALSE}
+```{r surv_example, eval=FALSE}
 library(survival)
 library(cifmodeling)
 
