--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -220,11 +220,13 @@ $$
 PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
 $$
 
-| 指標 | ターゲット集団 | 何を表す？ | いつ使う？ |
-|------|------|---------------------------|-------------|------------|
-| PAF（集団寄与割合） | **曝露+非曝露** | 集団全体の疾患のうち、どれだけがその曝露のため生じているか | 公衆衛生・医療政策で、曝露をなくせば集団でどれだけ減るかを評価するとき |
-| EF（寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか | 喫煙、飲酒、化学物質などの有害曝露の個人への影響を知りたいとき |
-| PF（予防寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | ワクチン・検診・運動などの予防法が、個人のリスクをどれだけ下げたか知りたいとき |
+| 指標 | ターゲット集団 | 何を表す？ |
+|------|------|---------------------------|-------------|
+| PAF（集団寄与割合） | **曝露+非曝露** | 集団全体の疾患のうち、どれだけがその曝露のため生じているか |
+| EF（寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか |
+| PF（予防寄与割合） | **曝露だけ** | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか | 
+
+曝露集団をターゲットにする意義は、具体的な状況をイメージすると理解しやすくなります。環境疫学では、たとえば化学物質や放射線被ばくなど環境要因の健康影響を評価することが求められます。この場合では、集団全体ではなく、実際に環境要因に曝露した集団における被害を定量化する必要があるため、曝露集団をターゲットとしたexcess fractionがしばしば用いられます。同じような理由で、ワクチン・検診・運動などの予防法の新規導入が、個人のリスクをどれだけ下げたか知りたいときは、preventable fractionが好まれています。
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
