--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -236,7 +236,7 @@ a:hover {
 > 研究で調べたい疑問がはっきりしないなら、"PICO"と"PECO"という要素を使って
 > 研究をデザインしなさい
 
-研究の構造化ってやつ」
+研究の要素をひとつひとつ決めていく計画の立て方を、研究の構造化っていったりする」
 :::
 
 ::: voice-daughter
