--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -152,7 +152,7 @@ a:hover {
 
 ------------------------------------------------------------------------
 
-## シリーズ一覧
+## エピソード一覧
 
 ### 1. Study design — 研究の出発点
 
